# hurd-libvfs

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  io_map.c  netfs.c  vfs.c
include/libvfs/: vfs.h  vfs_hooks.h
